--- a/contact/index.html
+++ b/contact/index.html
@@ -288,8 +288,8 @@
     </div>
 
 
-    <input type="hidden" name="_next" value="thank-you.html"> <!-- Redirect to thank-you page -->
-    <input type="hidden" name="_subject" value="New Inquiry from Website"> <!-- Custom email subject -->
+    <input type="hidden" name="_next" value="./thank-you.html"> <!-- Redirect to thank-you page -->
+    <input type="hidden" name="_subject" value="New Inquiry from Contact Page "> <!-- Custom email subject -->
     <input type="hidden" name="_autoresponse" value="Thank you! We will respond soon."> <!-- Auto reply to user -->
     <input type="hidden" name="form_type" value="contact_form"> <!-- Custom hidden info you want to send -->
     
