--- a/contact/index.html
+++ b/contact/index.html
@@ -288,7 +288,7 @@
     </div>
 
 
-    <input type="hidden" name="_next" value="./thank-you.html"> <!-- Redirect to thank-you page -->
+    <input type="hidden" name="_next" value="https://manmadha8688.github.io/sample_arch/contact/thank-you.html"> <!-- Redirect to thank-you page -->
     <input type="hidden" name="_subject" value="New Inquiry from Contact Page "> <!-- Custom email subject -->
     <input type="hidden" name="_autoresponse" value="Thank you! We will respond soon."> <!-- Auto reply to user -->
     <input type="hidden" name="form_type" value="contact_form"> <!-- Custom hidden info you want to send -->
