--- a/products/future decore/index.html
+++ b/products/future decore/index.html
@@ -270,7 +270,7 @@
       
       <div class="form-group">
         <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+        <input type="email" id="email" name="email" placeholder="Enter your email" >
       </div>
       
       <div class="form-group">
