--- a/contact/thank-you.html
+++ b/contact/thank-you.html
@@ -43,6 +43,6 @@
 <body>
     <h1>Thank You!</h1>
     <p>We are glad you contacted us. Our team will respond to your inquiry as soon as possible.</p>
-    <a href="/contact/">Go Back to Home</a>
+    <a href="../contact/">Go Back to Home</a>
 </body>
 </html>
