--- a/products/vox/index.html
+++ b/products/vox/index.html
@@ -272,7 +272,7 @@
 </div>
 <div class="product-category">
   <div class="product-image">
-    <img src="../../assets/images/brands/vox/" 
+    <img src="../../assets/images/brands/vox/Linerio.png" 
          alt="Vox Linerio Wall Panels - Modern Decorative Wall Solution" 
          loading="lazy">
   </div>
