--- a/contact/index.html
+++ b/contact/index.html
@@ -133,16 +133,17 @@
         </div>
     </div>
 </li>
-                         <li class="nav-item">
+
+ <li class="nav-item">
                             <a  class="nav-link">
                                 <span class="nav-text">Categories</span>
                                 <span class="nav-indicator"></span>
                             </a>
                             <div class="categories-dropdown" >
                                 <div class="brands-row">
-                                    <a href="categories/ceiling-panels/" class="brand-item">
+                                    <a href="../categories/ceiling-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="https://images.unsplash.com/photo-1600210491892-03d54c0aaf87?w=150&h=100&fit=crop&crop=center" alt="Ceiling Panels" class="brand-image">
+                                            <img src="../assets/images/categories/Ceiling-Panels.jpeg" alt="Ceiling Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Ceiling Panels</span>
                                             </div>
@@ -150,9 +151,9 @@
                                         <div class="brand-name">Ceiling Panels</div>
                                     </a>
                                     
-                                    <a href="categories/wall-panels/" class="brand-item">
+                                    <a href="../categories/wall-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="./assets/images/brands/StarDECOR/product.jpeg" alt="Wall Panels" class="brand-image">
+                                            <img src="../assets/images//categories/wall-panels.jpg" alt="Wall Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Wall Panels</span>
                                             </div>
@@ -160,9 +161,9 @@
                                         <div class="brand-name">Wall Panels</div>
                                     </a>
                                     
-                                    <a href="categories/floor-panels/" class="brand-item">
+                                    <a href="../categories/floor-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="https://images.unsplash.com/photo-1609767500458-d2a133f61cab?w=150&h=100&fit=crop&crop=center" alt="Floor Panels" class="brand-image">
+                                            <img src="../assets/images/categories/Floor-Panels.jpeg" alt="Floor Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Floor Panels</span>
                                             </div>
@@ -288,7 +289,7 @@
     </div>
 
 
-    <input type="hidden" name="_next" value="https://manmadha8688.github.io/sample_arch/contact/thank-you.html"> <!-- Redirect to thank-you page -->
+    <input type="hidden" name="_next" value="https://archedge.pro/contact/thank-you.html"> <!-- Redirect to thank-you page -->
     <input type="hidden" name="_subject" value="New Inquiry from Contact Page "> <!-- Custom email subject -->
     <input type="hidden" name="_autoresponse" value="Thank you! We will respond soon."> <!-- Auto reply to user -->
     <input type="hidden" name="form_type" value="contact_form"> <!-- Custom hidden info you want to send -->
