--- a/contact/thank-you.html
+++ b/contact/thank-you.html
@@ -3,7 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Thank You</title>
+<title>Thank You for Contacting Us | Archedge</title>
+
+<!-- SEO Meta Tags -->
+<meta name="description" content="Thank you for reaching out to Archedge. Our team will review your message and get back to you promptly. Explore our products and services while you wait.">
+<meta name="keywords" content="Archedge, Interior Design, Decorative Panels, Thank You, Contact, Inquiry">
+<meta name="robots" content="index, follow">
+
+<!-- Social Media / Open Graph -->
+<meta property="og:title" content="Thank You for Contacting Archedge">
+<meta property="og:description" content="We received your message and our team will respond shortly. Discover our premium decorative panels and interior design solutions.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.yourdomain.com/thank-you">
+<meta property="og:image" content="https://www.yourdomain.com/assets/images/thank-you-banner.jpg">
+
 <style>
     body {
         font-family: 'Inter', sans-serif;
@@ -13,36 +26,44 @@
         justify-content: center;
         min-height: 100vh;
         margin: 0;
-        background: #f8f8f8;
+        background: linear-gradient(to bottom, #f0f4f8, #ffffff);
         text-align: center;
+        padding: 20px;
     }
     h1 {
-        color: #333;
-        font-size: 2.5rem;
+        color: #222;
+        font-size: 3rem;
+        margin-bottom: 20px;
     }
     p {
         color: #555;
         font-size: 1.2rem;
-        max-width: 500px;
+        max-width: 600px;
+        line-height: 1.6;
     }
-    a {
+    a.button {
         display: inline-block;
-        margin-top: 20px;
-        padding: 10px 25px;
+        margin-top: 30px;
+        padding: 12px 30px;
         background: #007bff;
         color: #fff;
         text-decoration: none;
-        border-radius: 5px;
-        transition: background 0.3s;
+        border-radius: 6px;
+        font-weight: 500;
+        transition: background 0.3s, transform 0.2s;
     }
-    a:hover {
+    a.button:hover {
         background: #0056b3;
+        transform: translateY(-2px);
     }
 </style>
 </head>
 <body>
-    <h1>Thank You!</h1>
-    <p>We are glad you contacted us. Our team will respond to your inquiry as soon as possible.</p>
-    <a href="../contact/">Go Back to Home</a>
-</body>
+    <h1>Thank You for Contacting Archedge!</h1>
+    <p>We appreciate your interest in our interior and decorative solutions.
+         Our team has received your message and will respond as soon as possible.
+          Meanwhile, feel free to explore our latest products and inspiration for your space.</p>
+    
+    <a class="button" href="/">Return to Home</a>
+ </body>
 </html>
