--- a/products/vox/index.html
+++ b/products/vox/index.html
@@ -5,17 +5,46 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>vox india</title> 
-  
- 
+  <!-- Page Title -->
+  <title>Vox Decorative Panels & Interior Solutions in Hyderabad | Archedge</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Premium Vox decorative panels and interior solutions by Archedge. Modern wall panels, ceilings, and flooring for homes and offices in Hyderabad. Expert installation available.">
+  <meta name="keywords" content="Vox panels Hyderabad, Vox decorative panels, interior design materials, wall panels, ceiling panels, flooring, home decor">
+  <meta name="author" content="Archedge Interiors">
+  <meta name="robots" content="index, follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://archedge.pro/products/vox/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://archedge.pro/products/vox/" />
+  <meta property="og:title" content="Vox Decorative Panels - Premium Interior Solutions by Archedge" />
+  <meta property="og:description" content="Transform your space with premium Vox decorative panels. High-quality materials for modern interiors in Hyderabad." />
+  <meta property="og:image" content="https://archedge.pro/assets/images/og.png" />
+  <meta property="og:site_name" content="Archedge" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://archedge.pro/products/vox/" />
+  <meta name="twitter:title" content="Vox Decorative Panels - Modern Interior Design Solutions" />
+  <meta name="twitter:description" content="Premium Vox panels for contemporary interiors. Available in Hyderabad with expert installation." />
+  <meta name="twitter:image" content="https://archedge.pro/assets/images/og.png" />
+  <meta name="twitter:site" content="@archedge" />
+  <meta name="twitter:creator" content="@archedge" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+
   <!-- CSS & Fonts -->
   <link rel="stylesheet" href="../../assets/css/navbar.css" />
   <link rel="stylesheet" href="../../assets/css/brand-products.css" />
-  
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
+
 
 
 <script type="application/ld+json">
@@ -130,16 +159,16 @@
         </div>
     </div>
 </li>
-                         <li class="nav-item">
+                        <li class="nav-item">
                             <a  class="nav-link">
                                 <span class="nav-text">Categories</span>
                                 <span class="nav-indicator"></span>
                             </a>
                             <div class="categories-dropdown" >
                                 <div class="brands-row">
-                                    <a href="categories/ceiling-panels/" class="brand-item">
+                                    <a href="../../categories/ceiling-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="https://images.unsplash.com/photo-1600210491892-03d54c0aaf87?w=150&h=100&fit=crop&crop=center" alt="Ceiling Panels" class="brand-image">
+                                            <img src="../../assets/images/categories/Ceiling-Panels.jpeg" alt="Ceiling Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Ceiling Panels</span>
                                             </div>
@@ -147,9 +176,9 @@
                                         <div class="brand-name">Ceiling Panels</div>
                                     </a>
                                     
-                                    <a href="categories/wall-panels/" class="brand-item">
+                                    <a href="../../categories/wall-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="./assets/images/brands/StarDECOR/product.jpeg" alt="Wall Panels" class="brand-image">
+                                            <img src="../../assets/images//categories/wall-panels.jpg" alt="Wall Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Wall Panels</span>
                                             </div>
@@ -157,9 +186,9 @@
                                         <div class="brand-name">Wall Panels</div>
                                     </a>
                                     
-                                    <a href="categories/floor-panels/" class="brand-item">
+                                    <a href="../../categories/floor-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="https://images.unsplash.com/photo-1609767500458-d2a133f61cab?w=150&h=100&fit=crop&crop=center" alt="Floor Panels" class="brand-image">
+                                            <img src="../../assets/images/categories/Floor-Panels.jpeg" alt="Floor Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Floor Panels</span>
                                             </div>
