--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="About Archedge | Architects & Interiors Park in Hyderabad">
-    <meta property="og:description" content="Learn about Archedge – Hyderabad's destination for architecture, interior design, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels.">
+    <meta property="og:description" content="Know about Archedge – Hyderabad's destination for architecture, interior design, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels.">
     <meta property="og:image" content="https://archedge.pro/assets/images/og.png">
     <meta property="og:url" content="https://archedge.pro/about">
     <meta property="og:type" content="website">
@@ -131,16 +131,16 @@
         </div>
     </div>
 </li>
-                         <li class="nav-item">
+                          <li class="nav-item">
                             <a  class="nav-link">
                                 <span class="nav-text">Categories</span>
                                 <span class="nav-indicator"></span>
                             </a>
                             <div class="categories-dropdown" >
                                 <div class="brands-row">
-                                    <a href="categories/ceiling-panels/" class="brand-item">
+                                    <a href="../categories/ceiling-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="https://images.unsplash.com/photo-1600210491892-03d54c0aaf87?w=150&h=100&fit=crop&crop=center" alt="Ceiling Panels" class="brand-image">
+                                            <img src="../assets/images/categories/Ceiling-Panels.jpeg" alt="Ceiling Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Ceiling Panels</span>
                                             </div>
@@ -148,9 +148,9 @@
                                         <div class="brand-name">Ceiling Panels</div>
                                     </a>
                                     
-                                    <a href="categories/wall-panels/" class="brand-item">
+                                    <a href="../categories/wall-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="./assets/images/brands/StarDECOR/product.jpeg" alt="Wall Panels" class="brand-image">
+                                            <img src="../assets/images//categories/wall-panels.jpg" alt="Wall Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Wall Panels</span>
                                             </div>
@@ -158,9 +158,9 @@
                                         <div class="brand-name">Wall Panels</div>
                                     </a>
                                     
-                                    <a href="categories/floor-panels/" class="brand-item">
+                                    <a href="../categories/floor-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="https://images.unsplash.com/photo-1609767500458-d2a133f61cab?w=150&h=100&fit=crop&crop=center" alt="Floor Panels" class="brand-image">
+                                            <img src="../assets/images/categories/Floor-Panels.jpeg" alt="Floor Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Floor Panels</span>
                                             </div>
