--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="twitter:image" content="https://archedge.pro/assets/images/og.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://archedge.pro/assets/images/favicon.png" />
+    <link rel="icon" type="image/png" href="./assets/images/logo.png" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./assets/css/homepage.css" />
@@ -148,9 +148,9 @@
                             </a>
                             <div class="categories-dropdown" >
                                 <div class="brands-row">
-                                    <a href="categories/ceiling-panels/" class="brand-item">
+                                    <a href="./categories/ceiling-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="https://images.unsplash.com/photo-1600210491892-03d54c0aaf87?w=150&h=100&fit=crop&crop=center" alt="Ceiling Panels" class="brand-image">
+                                            <img src="./assets/images/categories/Ceiling-Panels.jpeg" alt="Ceiling Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Ceiling Panels</span>
                                             </div>
@@ -158,9 +158,9 @@
                                         <div class="brand-name">Ceiling Panels</div>
                                     </a>
                                     
-                                    <a href="categories/wall-panels/" class="brand-item">
+                                    <a href="./categories/wall-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="./assets/images/brands/StarDECOR/product.jpeg" alt="Wall Panels" class="brand-image">
+                                            <img src="./assets/images//categories/wall-panels.jpg" alt="Wall Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Wall Panels</span>
                                             </div>
@@ -168,9 +168,9 @@
                                         <div class="brand-name">Wall Panels</div>
                                     </a>
                                     
-                                    <a href="categories/floor-panels/" class="brand-item">
+                                    <a href="./categories/floor-panels/" class="brand-item">
                                         <div class="brand-image-container">
-                                            <img src="https://images.unsplash.com/photo-1609767500458-d2a133f61cab?w=150&h=100&fit=crop&crop=center" alt="Floor Panels" class="brand-image">
+                                            <img src="./assets/images/categories/Floor-Panels.jpeg" alt="Floor Panels" class="brand-image">
                                             <div class="brand-overlay">
                                                 <span class="view-products-text">View Floor Panels</span>
                                             </div>
