seo before deploy

--- a/careers/index.html
+++ b/careers/index.html
@@ -10,31 +10,138 @@
     <!-- Title & Description -->
     <title>Careers at Archedge | Job Openings & Partnerships in Hyderabad</title>
     <meta name="description" content="Explore careers at Archedge – Hyderabad’s leading interior and exterior design brand. Join our team or collaborate with us to distribute premium decorative wall panels, ceilings, and flooring across AP & Telangana.">
-
-    <!-- Keywords -->
     <meta name="keywords" content="Archedge careers, interior design jobs Hyderabad, wall panels jobs, ceiling design careers, flooring careers, Archedge recruitment, distribution partnership, decorative interiors Hyderabad, careers AP TS">
 
-    <!-- Open Graph for Social Sharing -->
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://archedge.pro/careers">
+
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Careers at Archedge | Job Openings & Partnerships">
     <meta property="og:description" content="Join Archedge for career growth or collaborate as a distribution partner in AP & Telangana.">
     <meta property="og:image" content="https://archedge.pro/assets/images/og.png">
     <meta property="og:url" content="https://archedge.pro/careers">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Archedge – Architects & Interiors Park">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@archedgeinteriors">
+    <meta name="twitter:creator" content="@archedgeinteriors">
     <meta name="twitter:title" content="Careers at Archedge">
     <meta name="twitter:description" content="Explore careers and distribution opportunities with Archedge.">
     <meta name="twitter:image" content="https://archedge.pro/assets/images/og.png">
 
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://archedge.pro/careers">
+    <!-- Favicon & Theme Color -->
+    <link rel="icon" type="image/png" href="../assets/images/logo.png">
+    <link rel="apple-touch-icon" href="../assets/images/logo.png">
+    <meta name="theme-color" content="#1a1a1a">
+    <meta name="msapplication-TileColor" content="#1a1a1a">
+    <meta name="msapplication-TileImage" content="../assets/images/logo.png">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/careers.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Enhanced SEO Meta Tags -->
+    <meta name="author" content="Archedge – Architects & Interiors Park">
+    <meta name="publisher" content="Archedge – Architects & Interiors Park">
+    <meta name="classification" content="Interior Design, Decorative Wall Panels, Ceiling Systems, Waterproof Flooring, PVC Panels, WPC Panels">
+    <meta name="geo.region" content="IN-TG">
+    <meta name="geo.placename" content="Hyderabad">
+    <meta name="geo.position" content="17.4065;78.4772">
+    <meta name="ICBM" content="17.4065, 78.4772">
+    <meta name="revisit-after" content="7 days">
+    <meta name="language" content="EN">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
+
+    <!-- Enhanced Open Graph -->
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:locale:alternate" content="en_GB">
+    <meta property="business:contact_data:street_address" content="H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony">
+    <meta property="business:contact_data:locality" content="Hyderabad">
+    <meta property="business:contact_data:region" content="Telangana">
+    <meta property="business:contact_data:postal_code" content="500035">
+    <meta property="business:contact_data:country_name" content="India">
+    <meta property="business:contact_data:email" content="archedge.pro@gmail.com">
+    <meta property="business:contact_data:phone_number" content="+919121188172">
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M53RF9HY7P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-M53RF9HY7P');
+    </script>
+
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "sxzyvyyrtw");
+    </script>
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": ["LocalBusiness", "HomeAndConstructionBusiness"],
+        "name": "Archedge – Architects & Interiors Park",
+        "description": "Explore careers at Archedge – Hyderabad’s leading interior and exterior design brand. Join our team or collaborate with us to distribute premium decorative wall panels, ceilings, and flooring across AP & Telangana.",
+        "url": "https://archedge.pro/careers",
+        "logo": "https://archedge.pro/assets/images/logo.png",
+        "image": "https://archedge.pro/assets/images/og.png",
+        "telephone": "+91-91211-88172",
+        "email": "archedge.pro@gmail.com",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
+            "addressLocality": "Hyderabad",
+            "addressRegion": "Telangana",
+            "postalCode": "500035",
+            "addressCountry": "IN"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 17.4065,
+            "longitude": 78.4772
+        },
+        "openingHoursSpecification": [{
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+                "Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"
+            ],
+            "opens": "09:00",
+            "closes": "18:00"
+        }],
+        "priceRange": "₹₹",
+        "areaServed": [{"@type":"State","name":"Telangana"},{"@type":"State","name":"Andhra Pradesh"}],
+        "sameAs": [
+            "https://www.facebook.com/archedgeinteriors",
+            "https://www.instagram.com/archedgeinteriors",
+            "https://www.linkedin.com/company/archedge-interiors"
+        ],
+        "foundingDate": "2025",
+        "aggregateRating": {"@type":"AggregateRating","ratingValue":"4.9","reviewCount":"127"}
+    }
+    </script>
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {"@type":"ListItem","position":1,"name":"Home","item":"https://archedge.pro/"},
+            {"@type":"ListItem","position":2,"name":"Careers","item":"https://archedge.pro/careers"}
+        ]
+    }
+    </script>
 </head>
 
 
