--- a/products/stardec/index.html
+++ b/products/stardec/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Charcoal Louvers & Wooden Panels in Hyderabad | StarDEC Solutions</title>
-  <meta name="description" content="Premium StarDEC charcoal louvers and wooden panels in Hyderabad. Modern interior design solutions with waterproof, fire-retardant panels. Expert installation available.">
-  <meta name="keywords" content="charcoal louvers Hyderabad, StarDEC wooden panels, modern wall panels, ceiling panels, interior design materials, waterproof panels, fire retardant panels">
-  <meta name="author" content="Archedge Interiors">
+  <title>StarDEC Charcoal Louvers & Wooden Panels | Premium Interior Solutions | Archedge Hyderabad</title>
+  <meta name="description" content="Premium StarDEC charcoal louvers and wooden panels in Hyderabad. Modern interior solutions with waterproof, fire-retardant panels. Expert installation available.">
+  <meta name="keywords" content="StarDEC, charcoal louvers, wooden panels, decorative wall panels, ceiling panels, waterproof panels, interior design Hyderabad, premium wall panels">
+  <meta name="author" content="Archedge – Architects & Interiors Park">
   <meta name="robots" content="index, follow">
-
+  
   <!-- Canonical -->
   <link rel="canonical" href="https://archedge.pro/products/stardec/" />
 
@@ -17,18 +16,35 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://archedge.pro/products/stardec/" />
   <meta property="og:title" content="StarDEC Charcoal Louvers & Wooden Panels - Premium Interior Solutions" />
-  <meta property="og:description" content="Transform your space with premium StarDEC charcoal louvers and wooden panels. Waterproof, fire-retardant materials for modern interiors in Hyderabad." />
+  <meta property="og:description" content="Transform your space with premium StarDEC charcoal louvers and wooden panels. Waterproof, fire-retardant, modern interiors in Hyderabad." />
   <meta property="og:image" content="https://archedge.pro/assets/images/og.png" />
-  <meta property="og:site_name" content="Archedge" />
+  <meta property="og:site_name" content="Archedge – Architects & Interiors Park" />
+  <meta property="og:locale:alternate" content="en_US" />
+  <meta property="og:locale:alternate" content="en_GB" />
 
-  <!-- Twitter -->
+  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://archedge.pro/products/stardec/" />
-  <meta name="twitter:title" content="StarDEC Charcoal Louvers - Modern Interior Design Solutions" />
+  <meta name="twitter:title" content="StarDEC Charcoal Louvers & Wooden Panels - Modern Interiors | Archedge Hyderabad" />
   <meta name="twitter:description" content="Premium charcoal louvers and wooden panels for contemporary interiors. Available in Hyderabad with expert installation." />
   <meta name="twitter:image" content="https://archedge.pro/assets/images/og.png" />
-  <meta name="twitter:site" content="@archedge" />
-  <meta name="twitter:creator" content="@archedge" />
+  <meta name="twitter:site" content="@archedgeinteriors" />
+  <meta name="twitter:creator" content="@archedgeinteriors" />
+
+  <!-- Enhanced SEO Meta Tags -->
+  <meta name="publisher" content="Archedge – Architects & Interiors Park" />
+  <meta name="classification" content="Interior Design, Decorative Wall Panels, Ceiling Systems, Waterproof Flooring, PVC Panels, WPC Panels" />
+  <meta name="geo.region" content="IN-TG" />
+  <meta name="geo.placename" content="Hyderabad" />
+  <meta name="geo.position" content="17.4065;78.4772" />
+  <meta name="ICBM" content="17.4065, 78.4772" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="language" content="EN" />
+  <meta name="distribution" content="global" />
+  <meta name="rating" content="general" />
+  <meta name="theme-color" content="#1a1a1a" />
+  <meta name="msapplication-TileColor" content="#1a1a1a" />
+  <meta name="msapplication-TileImage" content="../../assets/images/logo.png" />
 
   <!-- CSS & Fonts -->
   <link rel="stylesheet" href="../../assets/css/navbar.css" />
@@ -36,22 +52,89 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+  <!-- Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M53RF9HY7P"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-M53RF9HY7P');
+  </script>
 
+  <!-- Microsoft Clarity -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "sxzyvyyrtw");
+  </script>
+
+  <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Product",
-  "name": "Star Dec Decorative Wall Panels",
-  "description": "Premium Star Dec wall panels with modern designs for interiors and exteriors. Lightweight, durable, and easy to install.",
-  "image": "https://archedge.pro/images/og-interior.jpg",
-  "brand": {
-    "@type": "Brand",
-    "name": "Star Dec"
-  },
-  "url": "https://archedge.pro/products/stardec/"
-}
-</script>
+  {
+    "@context": "https://schema.org",
+    "@type": ["Product", "HomeAndConstructionBusiness", "LocalBusiness"],
+    "name": "StarDEC Decorative Wall Panels",
+    "description": "Premium StarDEC wall panels with modern designs for interiors and exteriors. Lightweight, durable, and easy to install.",
+    "url": "https://archedge.pro/products/stardec/",
+    "image": "https://archedge.pro/assets/images/og.png",
+    "logo": "https://archedge.pro/assets/images/logo.png",
+    "telephone": "+91-91211-88172",
+    "email": "archedge.pro@gmail.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
+      "addressLocality": "Hyderabad",
+      "addressRegion": "Telangana",
+      "postalCode": "500035",
+      "addressCountry": "IN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 17.4065,
+      "longitude": 78.4772
+    },
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+      "opens": "09:00",
+      "closes": "18:00"
+    }],
+    "priceRange": "₹₹",
+    "brand": {
+      "@type": "Brand",
+      "name": "StarDEC"
+    },
+    "foundingDate": "2025",
+    "sameAs": [
+      "https://www.facebook.com/archedgeinteriors",
+      "https://www.instagram.com/archedgeinteriors",
+      "https://www.linkedin.com/company/archedge-interiors"
+    ],
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.9",
+      "reviewCount": "127"
+    }
+  }
+  </script>
+
+  <!-- Breadcrumb Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {"@type": "ListItem","position":1,"name":"Home","item":"https://archedge.pro/"},
+      {"@type": "ListItem","position":2,"name":"Products","item":"https://archedge.pro/products/"},
+      {"@type": "ListItem","position":3,"name":"StarDEC","item":"https://archedge.pro/products/stardec/"}
+    ]
+  }
+  </script>
+
 </head>
+
 
 
 <body>
