--- a/about/index.html
+++ b/about/index.html
@@ -1,39 +1,144 @@
 <!DOCTYPE html>
  <html lang="en">
-<head>
+
+ <head>
     <!-- Basic Page Needs -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
     <!-- Title & Description -->
     <title>About Archedge | Architects & Interiors Park in Hyderabad</title>
     <meta name="description" content="Learn about Archedge – Hyderabad's destination for architecture, interior design, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels. Our story, mission, and commitment to quality spaces.">
     <meta name="keywords" content="Archedge, architects Hyderabad, interior design Hyderabad, decorative wall panels, PVC ceiling systems, waterproof flooring, WPC panels, building design Hyderabad, ceiling systems">
-
-    <!-- Canonical URL -->
     <link rel="canonical" href="https://archedge.pro/about">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="About Archedge | Architects & Interiors Park in Hyderabad">
-    <meta property="og:description" content="Know about Archedge – Hyderabad's destination for architecture, interior design, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels.">
-    <meta property="og:image" content="https://archedge.pro/assets/images/og.png">
-    <meta property="og:url" content="https://archedge.pro/about">
-    <meta property="og:type" content="website">
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://archedge.pro/about/">
-    <meta name="twitter:title" content="About Archedge | Architects & Interiors Park in Hyderabad">
-    <meta name="twitter:description" content="Learn about Archedge – Hyderabad's destination for architecture, interior design, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels.">
-    <meta name="twitter:image" content="https://archedge.pro/assets/images/og.png">
+    <!-- Favicon & App Icons -->
+    <link rel="icon" type="image/png" href="../assets/images/logo.png">
+    <link rel="apple-touch-icon" href="../assets/images/logo.png">
+    <meta name="theme-color" content="#1a1a1a">
+    <meta name="msapplication-TileColor" content="#1a1a1a">
+    <meta name="msapplication-TileImage" content="../assets/images/logo.png">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <!-- Preconnect / DNS Prefetch for Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="About Archedge | Architects & Interiors Park in Hyderabad">
+    <meta property="og:description" content="Learn about Archedge – Hyderabad's destination for architecture, interior design, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels.">
+    <meta property="og:image" content="https://archedge.pro/assets/images/og.png">
+    <meta property="og:url" content="https://archedge.pro/about">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Archedge – Architects & Interiors Park">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@archedgeinteriors">
+    <meta name="twitter:creator" content="@archedgeinteriors">
+    <meta name="twitter:title" content="About Archedge | Architects & Interiors Park in Hyderabad">
+    <meta name="twitter:description" content="Learn about Archedge – Hyderabad's destination for architecture, interior design, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels.">
+    <meta name="twitter:image" content="https://archedge.pro/assets/images/og.png">
+
+    <!-- Enhanced SEO Meta Tags -->
+    <meta name="author" content="Archedge – Architects & Interiors Park">
+    <meta name="publisher" content="Archedge – Architects & Interiors Park">
+    <meta name="classification" content="Interior Design, Decorative Wall Panels, Ceiling Systems, Waterproof Flooring, PVC Panels, WPC Panels">
+    <meta name="geo.region" content="IN-TG">
+    <meta name="geo.placename" content="Hyderabad">
+    <meta name="geo.position" content="17.4065;78.4772">
+    <meta name="ICBM" content="17.4065, 78.4772">
+    <meta name="revisit-after" content="7 days">
+    <meta name="language" content="EN">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M53RF9HY7P"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-M53RF9HY7P');
+    </script>
+
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "sxzyvyyrtw");
+    </script>
+
+    <!-- JSON-LD Structured Data: LocalBusiness -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": ["LocalBusiness","HomeAndConstructionBusiness"],
+        "name": "Archedge – Architects & Interiors Park",
+        "description": "Learn about Archedge – Hyderabad's destination for architecture, interior design, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels.",
+        "url": "https://archedge.pro/about",
+        "logo": "https://archedge.pro/assets/images/logo.png",
+        "image": "https://archedge.pro/assets/images/og.png",
+        "telephone": "+91-91211-88172",
+        "email": "archedge.pro@gmail.com",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
+            "addressLocality": "Hyderabad",
+            "addressRegion": "Telangana",
+            "postalCode": "500035",
+            "addressCountry": "IN"
+        },
+        "geo": {"@type":"GeoCoordinates","latitude":17.4065,"longitude":78.4772},
+        "openingHoursSpecification":[{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],"opens":"09:00","closes":"18:00"}],
+        "priceRange":"₹₹",
+        "areaServed":[{"@type":"State","name":"Telangana"},{"@type":"State","name":"Andhra Pradesh"}],
+        "hasOfferCatalog":{"@type":"OfferCatalog","name":"Interior Design Solutions","itemListElement":[{"@type":"Offer","itemOffered":{"@type":"Service","name":"About Archedge","description":"Learn about our company, mission, and commitment to quality interior design solutions"}}]},
+        "sameAs":["https://www.facebook.com/archedgeinteriors","https://www.instagram.com/archedgeinteriors","https://www.linkedin.com/company/archedge-interiors"],
+        "foundingDate":"2025",
+        "aggregateRating":{"@type":"AggregateRating","ratingValue":"4.9","reviewCount":"127"}
+    }
+    </script>
+
+    <!-- JSON-LD Structured Data: Breadcrumb -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement":[
+            {"@type":"ListItem","position":1,"name":"Home","item":"https://archedge.pro/"},
+            {"@type":"ListItem","position":2,"name":"About","item":"https://archedge.pro/about"}
+        ]
+    }
+    </script>
+
+    <!-- JSON-LD Structured Data: Website Search -->
+    <script type="application/ld+json">
+    {
+        "@context":"https://schema.org",
+        "@type":"WebSite",
+        "name":"Archedge – Architects & Interiors Park",
+        "url":"https://archedge.pro",
+        "potentialAction":{
+            "@type":"SearchAction",
+            "target":"https://archedge.pro/search?q={search_term_string}",
+            "query-input":"required name=search_term_string"
+        }
+    }
+    </script>
 </head>
+
 
 
 <body>
