--- a/contact/index.html
+++ b/contact/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <!-- Basic Page Needs -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Title & Description -->
+    <!-- Page Title & Description -->
     <title>Contact Archedge | Architects & Interiors Park in Hyderabad</title>
     <meta name="description" content="Get in touch with Archedge – Hyderabad's trusted destination for architecture, interior solutions, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels. Expert design and quality materials for modern spaces.">
     <meta name="keywords" content="Archedge contact, architects Hyderabad, interior designers Hyderabad, decorative wall panels, PVC ceiling systems, waterproof flooring, WPC panels, building design Hyderabad">
@@ -15,16 +14,27 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://archedge.pro/contact/">
 
+    <!-- Favicon & Theme -->
+    <link rel="icon" type="image/png" href="../assets/images/logo.png">
+    <link rel="apple-touch-icon" href="../assets/images/logo.png">
+    <meta name="theme-color" content="#1a1a1a">
+    <meta name="msapplication-TileColor" content="#1a1a1a">
+    <meta name="msapplication-TileImage" content="../assets/images/logo.png">
+
     <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://archedge.pro/contact/">
     <meta property="og:title" content="Contact Archedge | Architects & Interiors Park in Hyderabad">
     <meta property="og:description" content="Get in touch with Archedge – Hyderabad's trusted destination for architecture, interior solutions, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels.">
     <meta property="og:image" content="https://archedge.pro/assets/images/og.png">
-    <meta property="og:url" content="https://archedge.pro/contact/">
-    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Archedge – Architects & Interiors Park">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:locale:alternate" content="en_GB">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://archedge.pro/contact/">
+    <meta name="twitter:site" content="@archedgeinteriors">
+    <meta name="twitter:creator" content="@archedgeinteriors">
     <meta name="twitter:title" content="Contact Archedge | Architects & Interiors Park in Hyderabad">
     <meta name="twitter:description" content="Get in touch with Archedge – Hyderabad's trusted destination for architecture, interior solutions, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels.">
     <meta name="twitter:image" content="https://archedge.pro/assets/images/og.png">
@@ -34,7 +44,116 @@
     <link rel="stylesheet" href="../assets/css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Enhanced SEO Meta Tags -->
+    <meta name="author" content="Archedge – Architects & Interiors Park">
+    <meta name="publisher" content="Archedge – Architects & Interiors Park">
+    <meta name="classification" content="Interior Design, Decorative Wall Panels, Ceiling Systems, Waterproof Flooring, PVC Panels, WPC Panels">
+    <meta name="geo.region" content="IN-TG">
+    <meta name="geo.placename" content="Hyderabad">
+    <meta name="geo.position" content="17.4065;78.4772">
+    <meta name="ICBM" content="17.4065, 78.4772">
+    <meta name="revisit-after" content="7 days">
+    <meta name="language" content="EN">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
+
+    <!-- Enhanced Open Graph -->
+    <meta property="business:contact_data:street_address" content="H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony">
+    <meta property="business:contact_data:locality" content="Hyderabad">
+    <meta property="business:contact_data:region" content="Telangana">
+    <meta property="business:contact_data:postal_code" content="500035">
+    <meta property="business:contact_data:country_name" content="India">
+    <meta property="business:contact_data:email" content="archedge.pro@gmail.com">
+    <meta property="business:contact_data:phone_number" content="+919121188172">
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M53RF9HY7P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-M53RF9HY7P');
+    </script>
+
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "sxzyvyyrtw");
+    </script>
+
+    <!-- JSON-LD Structured Data: LocalBusiness + Breadcrumb + WebSite -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": ["LocalBusiness","HomeAndConstructionBusiness"],
+      "name": "Archedge – Architects & Interiors Park",
+      "description": "Get in touch with Archedge – Hyderabad's trusted destination for architecture, interior solutions, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels.",
+      "url": "https://archedge.pro/contact/",
+      "logo": "https://archedge.pro/assets/images/logo.png",
+      "image": "https://archedge.pro/assets/images/og.png",
+      "telephone": "+91-91211-88172",
+      "email": "archedge.pro@gmail.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
+        "addressLocality": "Hyderabad",
+        "addressRegion": "Telangana",
+        "postalCode": "500035",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 17.4065,
+        "longitude": 78.4772
+      },
+      "openingHoursSpecification": [{
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+        "opens": "09:00",
+        "closes": "18:00"
+      }],
+      "priceRange": "₹₹",
+      "areaServed": [{"@type":"State","name":"Telangana"},{"@type":"State","name":"Andhra Pradesh"}],
+      "sameAs": [
+        "https://www.facebook.com/archedgeinteriors",
+        "https://www.instagram.com/archedgeinteriors",
+        "https://www.linkedin.com/company/archedge-interiors"
+      ],
+      "foundingDate": "2025"
+      
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {"@type":"ListItem","position":1,"name":"Home","item":"https://archedge.pro/"},
+        {"@type":"ListItem","position":2,"name":"Contact","item":"https://archedge.pro/contact/"}
+      ]
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Archedge – Architects & Interiors Park",
+      "url": "https://archedge.pro",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://archedge.pro/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
 </head>
+
 
 <body>
     <!-- Header -->
