--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Basic Page Needs -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!-- Title & Description -->
     <title>Archedge – Decorative Wall Panels, Ceiling & Flooring in Hyderabad</title>
@@ -15,30 +15,159 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://archedge.pro/" />
 
+    <!-- Language -->
+    <html lang="en">
+
+    <!-- Favicon & App Icons -->
+    <link rel="icon" type="image/png" href="./assets/images/logo.png" />
+    <link rel="apple-touch-icon" href="./assets/images/logo.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#1a1a1a">
+    <meta name="msapplication-TileColor" content="#1a1a1a">
+    <meta name="msapplication-TileImage" content="./assets/images/logo.png">
+
+    <!-- Preconnect & DNS Prefetch for Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+
+    <!-- Fonts & Stylesheets -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./assets/css/homepage.css" />
+    <link rel="stylesheet" href="./assets/css/navbar.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:locale" content="en_IN" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Archedge" />
+    <meta property="og:site_name" content="Archedge – Architects & Interiors Park" />
     <meta property="og:url" content="https://archedge.pro/" />
     <meta property="og:title" content="Archedge – Decorative Wall Panels, Ceiling & Flooring in Hyderabad" />
     <meta property="og:description" content="Premium decorative wall panels, ceiling systems & waterproof flooring in Hyderabad. Free consultation & installation." />
     <meta property="og:image" content="https://archedge.pro/assets/images/og.png" />
 
-    <!-- Twitter -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://archedge.pro/" />
+    <meta name="twitter:site" content="@archedgeinteriors">
+    <meta name="twitter:creator" content="@archedgeinteriors">
     <meta name="twitter:title" content="Archedge – Decorative Wall Panels, Ceiling & Flooring in Hyderabad" />
     <meta name="twitter:description" content="Premium decorative wall panels, ceiling systems & waterproof flooring in Hyderabad. Free consultation & installation." />
     <meta name="twitter:image" content="https://archedge.pro/assets/images/og.png" />
+    <meta name="twitter:domain" content="archedge.pro">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./assets/images/logo.png" />
+    <!-- Enhanced SEO Meta Tags -->
+    <meta name="author" content="Archedge – Architects & Interiors Park">
+    <meta name="publisher" content="Archedge – Architects & Interiors Park">
+    <meta name="classification" content="Interior Design, Decorative Wall Panels, Ceiling Systems, Waterproof Flooring, PVC Panels, WPC Panels">
+    <meta name="geo.region" content="IN-TG">
+    <meta name="geo.placename" content="Hyderabad">
+    <meta name="geo.position" content="17.4065;78.4772">
+    <meta name="ICBM" content="17.4065, 78.4772">
+    <meta name="revisit-after" content="7 days">
+    <meta name="language" content="EN">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
 
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="./assets/css/homepage.css" />
-    <link rel="stylesheet" href="./assets/css/navbar.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M53RF9HY7P"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-M53RF9HY7P');
+    </script>
+
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "sxzyvyyrtw");
+    </script>
+
+    <!-- JSON-LD Structured Data: LocalBusiness -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": ["LocalBusiness", "HomeAndConstructionBusiness"],
+        "name": "Archedge – Architects & Interiors Park",
+        "description": "Premium decorative wall panels, ceiling systems & waterproof flooring in Hyderabad. Free consultation & installation. Call +91 91211 88172.",
+        "url": "https://archedge.pro",
+        "logo": "https://archedge.pro/assets/images/logo.png",
+        "image": "https://archedge.pro/assets/images/og.png",
+        "telephone": "+91-91211-88172",
+        "email": "archedge.pro@gmail.com",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
+            "addressLocality": "Hyderabad",
+            "addressRegion": "Telangana",
+            "postalCode": "500035",
+            "addressCountry": "IN"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 17.4065,
+            "longitude": 78.4772
+        },
+        "openingHoursSpecification": [{
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+            "opens": "09:00",
+            "closes": "18:00"
+        }],
+        "priceRange": "₹₹",
+        "areaServed": [{"@type": "State","name": "Telangana"},{"@type": "State","name": "Andhra Pradesh"}],
+        "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Interior Design Solutions",
+            "itemListElement": [
+                {"@type": "Offer","itemOffered":{"@type": "Service","name": "Decorative Wall Panels","description": "Premium waterproof and termite-resistant decorative wall panels for modern interiors"}},
+                {"@type": "Offer","itemOffered":{"@type": "Service","name": "Ceiling Systems","description": "Modern ceiling solutions including PVC, WPC, and decorative ceiling panels"}},
+                {"@type": "Offer","itemOffered":{"@type": "Service","name": "Waterproof Flooring","description": "Durable waterproof flooring solutions for residential and commercial spaces"}}
+            ]
+        },
+        "sameAs": [
+            "https://www.facebook.com/archedgeinteriors",
+            "https://www.instagram.com/archedgeinteriors",
+            "https://www.linkedin.com/company/archedge-interiors"
+        ],
+        "foundingDate": "2025",
+        "founder": {"@type": "Person","name": "Archedge Team"},
+        "aggregateRating": {"@type": "AggregateRating","ratingValue": "4.9","reviewCount": "127"}
+    }
+    </script>
+
+    <!-- JSON-LD: Breadcrumb -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://archedge.pro/"
+        }]
+    }
+    </script>
+
+    <!-- JSON-LD: Website Search -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Archedge – Architects & Interiors Park",
+        "url": "https://archedge.pro",
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://archedge.pro/search?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+        }
+    }
+    </script>
 </head>
 
 
