--- a/products/stanza/index.html
+++ b/products/stanza/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+  <!-- Basic Meta -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Stanza - Soffit | Stanza Decor Products - Designer Wall Panels & Fluted Designs | Archedge Hyderabad</title> 
+  <title>Stanza - Soffit | Stanza Decor Products - Designer Wall Panels & Fluted Designs | Archedge Hyderabad</title>
   <meta name="description" content="Buy Stanza Decor soffit panels & louvers in Hyderabad. Premium waterproof decorative wall panels for modern interiors. Soffit louvers, panels, and ceiling solutions. Best prices, authorized dealer.">
   <meta name="keywords" content="Stanza Decor, soffit panels, soffit louvers, decorative wall panels, ceiling panels, waterproof panels, Hyderabad, interior design, architectural panels">
+  <meta name="author" content="Archedge – Architects & Interiors Park">
   <meta name="robots" content="index, follow">
 
-  <!-- Canonical -->
+  <!-- Canonical URL -->
   <link rel="canonical" href="https://archedge.pro/products/stanza/" />
 
   <!-- Open Graph -->
@@ -19,24 +20,118 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://archedge.pro/products/stanza" />
   <meta property="og:image" content="https://archedge.pro/assets/images/og.png" />
-  <meta property="og:site_name" content="Archedge" />
+  <meta property="og:site_name" content="Archedge – Architects & Interiors Park" />
+  <meta property="og:locale:alternate" content="en_US" />
+  <meta property="og:locale:alternate" content="en_GB" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://archedge.pro/products/stanza/">
+  <meta name="twitter:url" content="https://archedge.pro/products/stanza/" />
   <meta name="twitter:title" content="Stanza - Soffit | Designer Wall Panels & Louvers | Archedge Hyderabad" />
   <meta name="twitter:description" content="Premium Stanza Decor soffit panels & louvers in Hyderabad. Waterproof, stylish, and perfect for modern interiors." />
   <meta name="twitter:image" content="https://archedge.pro/assets/images/og.png" />
-  <meta name="twitter:site" content="@archedge" />
-  <meta name="twitter:creator" content="@archedge" />
+  <meta name="twitter:site" content="@archedgeinteriors" />
+  <meta name="twitter:creator" content="@archedgeinteriors" />
 
-  <!-- CSS & Fonts -->
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="../../assets/css/navbar.css" />
   <link rel="stylesheet" href="../../assets/css/brand-products.css" />
-  
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Enhanced SEO Meta Tags -->
+  <meta name="publisher" content="Archedge – Architects & Interiors Park">
+  <meta name="classification" content="Interior Design, Decorative Wall Panels, Ceiling Systems, Waterproof Flooring, PVC Panels, WPC Panels">
+  <meta name="geo.region" content="IN-TG">
+  <meta name="geo.placename" content="Hyderabad">
+  <meta name="geo.position" content="17.4065;78.4772">
+  <meta name="ICBM" content="17.4065, 78.4772">
+  <meta name="revisit-after" content="7 days">
+  <meta name="language" content="EN">
+  <meta name="distribution" content="global">
+  <meta name="rating" content="general">
+  <meta name="theme-color" content="#1a1a1a">
+  <meta name="msapplication-TileColor" content="#1a1a1a">
+  <meta name="msapplication-TileImage" content="../../assets/images/logo.png">
+
+  <!-- Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M53RF9HY7P"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-M53RF9HY7P');
+  </script>
+
+  <!-- Microsoft Clarity -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "sxzyvyyrtw");
+  </script>
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": ["LocalBusiness", "HomeAndConstructionBusiness", "Product"],
+    "name": "Stanza Designer Wall Panels - Archedge",
+    "description": "Premium Stanza designer wall panels for interiors and exteriors. High-quality, durable, and modern decorative panels in Hyderabad.",
+    "url": "https://archedge.pro/products/stanza/",
+    "logo": "https://archedge.pro/assets/images/logo.png",
+    "image": "https://archedge.pro/assets/images/og.png",
+    "telephone": "+91-91211-88172",
+    "email": "archedge.pro@gmail.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
+      "addressLocality": "Hyderabad",
+      "addressRegion": "Telangana",
+      "postalCode": "500035",
+      "addressCountry": "IN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 17.4065,
+      "longitude": 78.4772
+    },
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+      "opens": "09:00",
+      "closes": "18:00"
+    }],
+    "priceRange": "₹₹",
+    "areaServed": [{"@type":"State","name":"Telangana"},{"@type":"State","name":"Andhra Pradesh"}],
+    "brand": {"@type":"Brand","name":"Stanza"},
+    "foundingDate": "2025",
+    "sameAs": [
+      "https://www.facebook.com/archedgeinteriors",
+      "https://www.instagram.com/archedgeinteriors",
+      "https://www.linkedin.com/company/archedge-interiors"
+    ],
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.9",
+      "reviewCount": "127"
+    }
+  }
+  </script>
+
+  <!-- Breadcrumb Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {"@type": "ListItem","position": 1,"name": "Home","item": "https://archedge.pro/"},
+      {"@type": "ListItem","position": 2,"name": "Products","item": "https://archedge.pro/products/"},
+      {"@type": "ListItem","position": 3,"name": "Stanza","item": "https://archedge.pro/products/stanza/"}
+    ]
+  }
+  </script>
 </head>
 
 
