--- a/products/vox/index.html
+++ b/products/vox/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +10,7 @@
   <!-- SEO Meta Tags -->
   <meta name="description" content="Premium Vox decorative panels and interior solutions by Archedge. Modern wall panels, ceilings, and flooring for homes and offices in Hyderabad. Expert installation available.">
   <meta name="keywords" content="Vox panels Hyderabad, Vox decorative panels, interior design materials, wall panels, ceiling panels, flooring, home decor">
-  <meta name="author" content="Archedge Interiors">
+  <meta name="author" content="Archedge – Architects & Interiors Park">
   <meta name="robots" content="index, follow">
 
   <!-- Canonical -->
@@ -23,7 +22,9 @@
   <meta property="og:title" content="Vox Decorative Panels - Premium Interior Solutions by Archedge" />
   <meta property="og:description" content="Transform your space with premium Vox decorative panels. High-quality materials for modern interiors in Hyderabad." />
   <meta property="og:image" content="https://archedge.pro/assets/images/og.png" />
-  <meta property="og:site_name" content="Archedge" />
+  <meta property="og:site_name" content="Archedge – Architects & Interiors Park" />
+  <meta property="og:locale:alternate" content="en_US" />
+  <meta property="og:locale:alternate" content="en_GB" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -31,8 +32,23 @@
   <meta name="twitter:title" content="Vox Decorative Panels - Modern Interior Design Solutions" />
   <meta name="twitter:description" content="Premium Vox panels for contemporary interiors. Available in Hyderabad with expert installation." />
   <meta name="twitter:image" content="https://archedge.pro/assets/images/og.png" />
-  <meta name="twitter:site" content="@archedge" />
-  <meta name="twitter:creator" content="@archedge" />
+  <meta name="twitter:site" content="@archedgeinteriors" />
+  <meta name="twitter:creator" content="@archedgeinteriors" />
+
+  <!-- Enhanced SEO Meta Tags -->
+  <meta name="publisher" content="Archedge – Architects & Interiors Park" />
+  <meta name="classification" content="Interior Design, Decorative Wall Panels, Ceiling Systems, Waterproof Flooring, PVC Panels, WPC Panels" />
+  <meta name="geo.region" content="IN-TG" />
+  <meta name="geo.placename" content="Hyderabad" />
+  <meta name="geo.position" content="17.4065;78.4772" />
+  <meta name="ICBM" content="17.4065, 78.4772" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="language" content="EN" />
+  <meta name="distribution" content="global" />
+  <meta name="rating" content="general" />
+  <meta name="theme-color" content="#1a1a1a" />
+  <meta name="msapplication-TileColor" content="#1a1a1a" />
+  <meta name="msapplication-TileImage" content="../../assets/images/logo.png" />
 
   <!-- Favicon -->
   <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -43,24 +59,89 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+  <!-- Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M53RF9HY7P"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-M53RF9HY7P');
+  </script>
+
+  <!-- Microsoft Clarity -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "sxzyvyyrtw");
+  </script>
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": ["Product", "LocalBusiness", "HomeAndConstructionBusiness"],
+    "name": "Vox Decorative Panels",
+    "description": "Premium Vox decorative panels and interior solutions for modern interiors and exteriors in Hyderabad. Lightweight, durable, and easy to install.",
+    "url": "https://archedge.pro/products/vox/",
+    "image": "https://archedge.pro/assets/images/og.png",
+    "logo": "https://archedge.pro/assets/images/logo.png",
+    "telephone": "+91-91211-88172",
+    "email": "archedge.pro@gmail.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
+      "addressLocality": "Hyderabad",
+      "addressRegion": "Telangana",
+      "postalCode": "500035",
+      "addressCountry": "IN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 17.4065,
+      "longitude": 78.4772
+    },
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+      "opens": "09:00",
+      "closes": "18:00"
+    }],
+    "priceRange": "₹₹",
+    "brand": {
+      "@type": "Brand",
+      "name": "Vox"
+    },
+    "foundingDate": "2025",
+    "sameAs": [
+      "https://www.facebook.com/archedgeinteriors",
+      "https://www.instagram.com/archedgeinteriors",
+      "https://www.linkedin.com/company/archedge-interiors"
+    ],
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.9",
+      "reviewCount": "127"
+    }
+  }
+  </script>
+
+  <!-- Breadcrumb Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://archedge.pro/"},
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://archedge.pro/products/"},
+      {"@type":"ListItem","position":3,"name":"Vox","item":"https://archedge.pro/products/vox/"}
+    ]
+  }
+  </script>
+
 </head>
 
-
-
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Product",
-  "name": "Stanza Wall Panels",
-  "description": "Modern Stanza wall panels for elegant interiors and exteriors. Premium quality and easy installation.",
-  "image": "https://archedge.pro/images/og-interior.jpg",
-  "brand": {
-    "@type": "Brand",
-    "name": "Stanza"
-  },
-  "url": "https://archedge.pro/products/stanza/"
-}
-</script>
 
 <body>
 
