--- a/about/index.html
+++ b/about/index.html
@@ -176,7 +176,10 @@
                         </li>
                         <li class="nav-item">
     
-                    <a class="nav-link">Products </a>
+<a  class="nav-link">
+        <span class="nav-text">Products</span> 
+        <span class="nav-indicator"></span>
+    </a>
     <div class="brands-dropdown">
         <div class="brands-row">
           <a href="../products/pare/" class="brand-item">
