--- a/contact/index.html
+++ b/contact/index.html
@@ -338,7 +338,7 @@
                     <i class="fas fa-envelope"></i>
                     <div>
                         <h4>Email</h4>
-                        <p><a href="mailto:archedge@gmail.com">archedge@gmail.com</a></p>
+                        <p><a href="mailto:archedge.pro@gmail.com">archedge.pro@gmail.com</a></p>
                     </div>
                 </div>
                 
@@ -540,7 +540,7 @@ if (!/^[6-9]\d{9}$/.test(phoneValue)) {
 
         <div class="footer-column">
           <h4>Contact Info</h4>
-          <p>Have a project in mind? Let's talk: <a href="mailto:archedge@gmail.com">archedge@gmail.com</a></p>
+          <p>Have a project in mind? Let's talk: <a href="mailto:archedge.pro@gmail.com">archedge.pro@gmail.com</a></p>
           <p><strong>Phone:</strong> <a href="tel:+919121188172">+91 91211 88172</a></p>
         </div>
 
