--- a/products/pare/index.html
+++ b/products/pare/index.html
@@ -179,7 +179,7 @@
                             </a>
                         </li>
 <li class="nav-item">
-    <a class="nav-link active">
+    <a class="nav-link ">
         <span class="nav-text">Products</span>
         <span class="nav-indicator"></span>
     </a>
