--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Archedge – Decorative Wall Panels, Ceiling & Flooring in Hyderabad</title>
     <meta name="description" content="Premium decorative wall panels, ceiling systems & waterproof flooring in Hyderabad. Free consultation & installation. Call +91 91211 88172." />
     <meta name="keywords" content="decorative wall panels Hyderabad, waterproof wall panels, ceiling panels Hyderabad, PVC wall panels, WPC panels, termite resistant panels, interior wall panels, commercial wall panels, home interior panels, Archedge Hyderabad, best wall panels Hyderabad, modern interior panels" />
-    <meta name="robots" content="index, follow" />
+   
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://archedge.pro/" />
@@ -19,12 +19,31 @@
     <html lang="en">
 
     <!-- Favicon & App Icons -->
-    <link rel="icon" type="image/png" href="./assets/images/logo.png" />
-    <link rel="apple-touch-icon" href="./assets/images/logo.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#1a1a1a">
-    <meta name="msapplication-TileColor" content="#1a1a1a">
-    <meta name="msapplication-TileImage" content="./assets/images/logo.png">
+    <meta name="robots" content="index, follow" />
+
+    <!-- Favicon for Chrome & others -->
+<!-- Standard Favicon -->
+<link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico">
+
+<!-- PNG Icons for Modern Browsers -->
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+
+<!-- Apple iOS Touch Icon -->
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+
+<!-- Android / PWA -->
+<link rel="manifest" href="/assets/images/manifest.json">
+<meta name="theme-color" content="#1a1a1a">
+
+<!-- Windows Tiles -->
+<meta name="msapplication-TileColor" content="#1a1a1a">
+<meta name="msapplication-TileImage" content="/assets/images/mstile-150x150.png">
+
+<!-- Safari Pinned Tab (macOS/iOS Safari) -->
+<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#1a1a1a">
+
 
     <!-- Preconnect & DNS Prefetch for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
