--- a/products/vox/index.html
+++ b/products/vox/index.html
@@ -50,8 +50,31 @@
   <meta name="msapplication-TileColor" content="#1a1a1a" />
   <meta name="msapplication-TileImage" content="../../assets/images/logo.png" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+ 
+
+<!-- Standard Favicon -->
+<link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico">
+
+<!-- PNG Icons for Modern Browsers -->
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+
+<!-- Apple iOS Touch Icon -->
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+
+<!-- Android / PWA -->
+<link rel="manifest" href="/assets/images/manifest.json">
+<meta name="theme-color" content="#1a1a1a">
+
+<!-- Windows Tiles -->
+<meta name="msapplication-TileColor" content="#1a1a1a">
+<meta name="msapplication-TileImage" content="/assets/images/mstile-150x150.png">
+
+<!-- Safari Pinned Tab (macOS/iOS Safari) -->
+<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#1a1a1a">
+
+
 
   <!-- CSS & Fonts -->
   <link rel="stylesheet" href="../../assets/css/navbar.css" />
@@ -307,7 +330,7 @@
 
 
 <!-- Hero Section -->
-<section class="hero-section" style="background:url('../../assets/images/brands/vox/fronto.jpeg') fixed;" id="heroSection">
+<section class="hero-section" style="background:url('../../assets/images/brands/vox/cover.jpg')  fixed;" id="heroSection">
   <!-- Parallax Background Layers -->
   <div class="parallax-container">
     <div class="parallax-layer layer-1" data-speed="0.2"></div>
