about images update

--- a/about/index.html
+++ b/about/index.html
@@ -337,7 +337,7 @@
     <section class="section">
         <div class="two-column left-image fade-in">
             <div class="image-block">
-                <img src="../assets/images/about/cover.jpg" alt="Archedge Interiors - Premium decorative wall panels and ceiling systems showroom in Hyderabad" loading="lazy">
+                <img src="../assets/images/about/our-story.webp" alt="Archedge Interiors - Premium decorative wall panels and ceiling systems showroom in Hyderabad" loading="lazy">
             </div>
             <div class="text-block">
                 <h2>Our Story</h2>
@@ -390,7 +390,7 @@
                 </ul>
             </div>
             <div class="image-block">
-                <img src="../assets/images/about/image2.webp" alt="Our Mission - Archedge Interiors" loading="lazy">
+                <img src="../assets/images/about/our-mis.webp" alt="Our Mission - Archedge Interiors" loading="lazy">
             </div>
         </div>
     </section>
@@ -399,7 +399,7 @@
     <section class="section">
         <div class="two-column left-image fade-in">
             <div class="image-block">
-                <img src="../assets/images/about/image1.png" alt="Our Values - Archedge Interiors" loading="lazy">
+                <img src="../assets/images/about/our-values.jpg" alt="Our Values - Archedge Interiors" loading="lazy">
             </div>
             <div class="text-block">
                 <h2>Our Values</h2>
