ctegories without pare

--- a/contact/index.html
+++ b/contact/index.html
@@ -134,8 +134,8 @@
       "openingHoursSpecification": [{
         "@type": "OpeningHoursSpecification",
         "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
-        "opens": "09:00",
-        "closes": "18:00"
+        "opens": "09:30",
+        "closes": "18:30"
       }],
       "priceRange": "₹₹",
       "areaServed": [{"@type":"State","name":"Telangana"},{"@type":"State","name":"Andhra Pradesh"}],
@@ -368,6 +368,7 @@
                     <div>
                         <h4>Phone</h4>
                         <p><a href="tel:+919121188172">+91 91211 88172</a></p>
+                        <p><a href="tel:+919063021489">+91 90630 21489</a></p>
                     </div>
                 </div>
                 
@@ -388,8 +389,8 @@
                     <i class="fas fa-clock"></i>
                     <div>
                         <h4>Business Hours</h4>
-                        <p>Monday - Saturday: 9:00 AM - 7:00 PM<br>
-                        Sunday: 10:00 AM - 5:00 PM</p>
+                        <p>Monday - Saturday: 9:30 AM - 7:30 PM<br>
+                        Sunday: 10:30 AM - 1:30 PM</p>
                     </div>
                 </div>
             </div>
