--- a/products/pare/index.html
+++ b/products/pare/index.html
@@ -127,8 +127,8 @@
     "openingHoursSpecification": [{
       "@type": "OpeningHoursSpecification",
       "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
-      "opens": "09:00",
-      "closes": "18:00"
+      "opens": "09:30",
+      "closes": "18:30"
     }],
     "priceRange": "₹₹",
     "areaServed": [{"@type":"State","name":"Telangana"},{"@type":"State","name":"Andhra Pradesh"}],
@@ -381,6 +381,22 @@
   </div>
 </div>
 
+  <h2>LUXE Collection</h2>
+  <!-- Product Grid -->
+  <section class="products-grid" id="products">
+    <!-- Decorative Wall Panels -->
+    <div class="product-category">
+      <div class="product-image">
+        <img src="../../assets/images/brands/pare/luxe.png" alt="Pare India Luxe decorative wall panels - Modern dual-texture interior design panels" loading="lazy">
+      </div>
+      <div class="product-category-content">
+        <h3> Luxe </h3>
+  <p>Elegant and unique wall panels that redefine modern interior aesthetics.</p>
+         <button class="btn pdfBtn" aria-label="Download PU Stones & Leafs catalog" data-pdf="../../assets/pdfs/ArchEdge-PARÉ LUXE Brochure.pdf">Explore →</button>
+
+      </div>
+  </div>
+  </section>
 
 
     <h2>Innov+ Collection</h2>
